--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.13 FATAL_ERROR)
 PROJECT("cars_web")
-set(CMAKE_BUILD_TYPE Debug)
+#set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_CXX_STANDARD 17)
 
 set (LIBS_DIR ${CMAKE_SOURCE_DIR}/libs)
@@ -8,6 +8,8 @@ include_directories(${LIBS_DIR}/pqxx/include)
 include_directories(${LIBS_DIR}/openssl/include)
 include_directories(${LIBS_DIR}/rapidjson)
 include_directories(${LIBS_DIR})
+include_directories("C:/Program Files/PostgreSQL/12/include")
+link_directories("C:\\Program Files\\PostgreSQL\\12\\lib")
 include_directories("C:\\Program Files\\PostgreSQL\\9.6\\include")
 add_executable(cars_web
     main.cpp
@@ -21,10 +23,18 @@ add_executable(cars_web
 
     managers/UserManager.h
     managers/UserManager.cpp
-	managers/CarManager.h
+    managers/CarManager.h
     managers/CarManager.cpp
-	managers/AutoPartManager.h
+    managers/AutoPartManager.h
     managers/AutoPartManager.cpp
+    managers/PQManager.h
+    managers/PQManager.cpp
+    managers/ESerie.h
+    managers/ESerie.cpp
+    managers/EMake.h
+    managers/EMake.cpp
+    managers/EModel.h
+    managers/EModel.cpp
 
     routes/AuthRoute.h
     routes/AuthRoute.cpp
@@ -36,10 +46,32 @@ add_executable(cars_web
     routes/AutoPartsRoute.cpp
 )
 
+add_executable(cron_main
+    cron_main.cpp
+    managers/PQManager.h
+    managers/PQManager.cpp
+)
+
 target_link_libraries(cars_web 
-	${LIBS_DIR}/pqxx/lib/x64/pqxx.lib
-	#crypto 
-	#ssl
-	"C:\\Program Files\\PostgreSQL\\9.6\\lib\\libpq.lib"
-	${LIBS_DIR}/openssl/lib/x64/libssl.lib
-	${LIBS_DIR}/openssl/lib/x64/libcrypto.lib)
+	#${LIBS_DIR}/pqxx/lib/x64/pqxx.lib
+      libcrypto
+        libssl
+	libpq
+	#pthread
+
+	#	"C:\\Program Files\\PostgreSQL\\9.6\\lib\\libpq.lib"
+#	${LIBS_DIR}/openssl/lib/x64/libssl.lib
+#	${LIBS_DIR}/openssl/lib/x64/libcrypto.lib
+)
+
+target_link_libraries(cron_main
+        #crypto
+        #ssl
+        libpq
+       # pthread
+
+        #	"C:\\Program Files\\PostgreSQL\\9.6\\lib\\libpq.lib"
+#	${LIBS_DIR}/openssl/lib/x64/libssl.lib
+#	${LIBS_DIR}/openssl/lib/x64/libcrypto.lib
+)
+
